# mcp-servers

./: .gitignore  add_app_controller_example.ts  tsconfig.json
other/: README.md  package.json  pnpm-workspace.yaml
other/12306-mcp/: README.md
other/amap-maps-mcp-server/: README.md  package.json
other/caiyun-mcp-tools/: README.md  index.js  package.json
other/edgeone-pages-mcp/: README.md  package.json
other/howtocook-mcp/: README.md  package.json
other/mcp-server-baidu-map/: README.md  package.json
other/mcp-server-hotnews/: README.md  package.json
other/mcp-trends-hub/: README.md  package.json
other/playwright/: README.md  cli.js  config.d.ts  index.d.ts  index.js
other/server-sequential-thinking/: README.md  package.json  tsconfig.json
other/variflight-ai/: README.md  package.json
python/: README.md
python/mcp-ashare-quant/: Dockerfile  README.md  pyproject.toml  recommend.py  server.py
python/mcp-ashare-quant/backup/: server.py
python/mcp-ashare-quant/mcp_ashare_quant/: stock_mapping.json
python/mcp-server-document-writer/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
python/mcp-server-image-processing/: __init__.py  main.py  pyproject.toml  server.py
python/mcp-system-cleaner/: LICENSE  README.md  server.py
python/mcp_volc_edit/: README.md  cutout.py  pyproject.toml
src/: example.ts  index.ts  types.ts  utils.ts
typescript/: README.md  package.json  pnpm-workspace.yaml
typescript/image-processor/: README.md  package.json
typescript/ip-query/: mcp-server.json
typescript/mcp-baidu-translate/: README.md  package.json  tsconfig.json
typescript/mcp-bilibili/: README.md  index.ts  oauth.ts  package.json  tsconfig.json  user.ts  video.ts
typescript/mcp-book-info/: README.md  package.json
typescript/mcp-computer-env/: README.md  package.json  tsconfig.json
typescript/mcp-daily-hot-list/: README.md  package.json  tsconfig.json
typescript/mcp-dialog/: README.md  package.json
typescript/mcp-doc-info/: README.md  package.json  tsconfig.json
typescript/mcp-enterprise-info/: README.md  package-lock.json  package.json  tsconfig.json
typescript/mcp-exchange-rate/: README.md  package-lock.json  package.json
typescript/mcp-file-compression/: package-lock.json  package.json
typescript/mcp-file-select/: README.md  package.json  tsconfig.json
typescript/mcp-get-location/: README.md  README_CN.md  README_EN.md  index.ts  package.json  tsconfig.json
typescript/mcp-get-off-work/: README.md  package.json
typescript/mcp-go-off-work/: README.md  package.json
typescript/mcp-image-editor/: README.md  package.json  tsconfig.json
typescript/mcp-image-processor/: README.md  (+4 more)
(+108 files in other folders)
