[project]
name = "mcp-volc-edit"
version = "0.1.0"
description = "MCP服务器：火山引擎图像编辑工具，提供显著性分割、背景移除等图像处理功能"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "volcengine>=1.0.0",
    "pillow>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
